--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -8,7 +8,16 @@ jobs:
   auto-push:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        node-version: [16.x] # Spécifiez la version de Node.js que vous souhaitez utiliser
+
     steps:
+    - name: Utiliser Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version }}
+
     - name: Checkout du code
       uses: actions/checkout@v2
 
