--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,45 +1,32 @@
-name: Auto-push de fichier vide toutes les 4 heures
+name: Test de connexion GitHub
 
 on:
-  schedule:
-    - cron: "0 */4 * * *"
+  push:
+    branches:
+      - main  # Déclencher le workflow sur les pushes vers la branche principale
 
 jobs:
-  auto-push:
+  test-connexion:
     runs-on: ubuntu-latest
 
     steps:
     - name: Vérifier le répertoire actuel
       run: pwd  # Affiche le répertoire de travail actuel
 
-    - name: Afficher le contenu du répertoire
-      run: ls -al  # Affiche le contenu du répertoire de travail
-
     - name: Afficher les informations sur l'environnement
       run: env  # Affiche les variables d'environnement
 
-    - name: Définir le répertoire de travail
-      run: cd $GITHUB_WORKSPACE
-      shell: bash
-
-    - name: Créer un fichier vide
-      run: |
-        touch new_file.txt
-        echo "Fichier vide créé pour le push automatique" > new_file.txt
-
-    - name: Afficher le contenu du répertoire après la création du fichier
-      run: ls -al
-
     - name: Configuration de l'utilisateur Git
       run: |
-        git config --global user.name "ALFRED-TERNYNCK"
-        git config --global user.email "ternynckalfred@gmail.com"
+        git config --global user.name "YOUR_USERNAME"
+        git config --global user.email "YOUR_EMAIL@example.com"
 
     - name: Afficher l'état de la configuration Git
       run: git config --list
 
-    - name: Commit et push du fichier vide
-      run: |
-        git add new_file.txt
-        git commit -m "Ajout d'un fichier vide pour le push automatique"
-        git push
+    - name: Cloner le référentiel GitHub
+      run: git clone https://github.com/Alfred-TERNYNCK/git@github.com:Alfred-TERNYNCK/workflow.git test_clone
+      # Remplacez YOUR_USERNAME et YOUR_REPOSITORY par votre nom d'utilisateur GitHub et le nom de votre référentiel
+
+    - name: Afficher le contenu du répertoire cloné
+      run: ls -al test_clone
